--- a/package.json
+++ b/package.json
@@ -1,35 +1,22 @@
 {
   "name": "googlebooks-app",
   "version": "1.0.0",
-  "description": "<div align=\"center\">",
+  "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "cd server && npm start",
-    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "heroku-postbuild": "cd client && npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/deannapi/book-search-engine.git"
+    "build": "cd client && npm run build"
   },
   "keywords": [],
-  "author": "DeAnna Martinez",
-  "license": "MIT",
-  "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "apollo-boost": "^0.4.9",
-    "apollo-server-express": "^2.16.1",
-    "graphql-tag": "^2.11.0",
-    "if-env": "^1.0.4"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.3.0",
-    "nodemon": "^2.0.4"
+    "concurrently": "^5.1.0"
   },
-  "bugs": {
-    "url": "https://github.com/deannapi/book-search-engine/issues"
-  },
-  "homepage": "https://github.com/deannapi/book-search-engine#readme"
+  "dependencies": {
+    "apollo-client": "^2.6.10",
+    "graphql": "^15.5.2"
+  }
 }
